--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://anshu:your-password@cluster0.fyrgmrm.mongodb.net
 CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET = full-development   // complex string 
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = full-backend    // complex string 
+REFRESH_TOKEN_EXPIRY = 10d
