--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET = full-development   // complex string
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = full-backend    // complex string 
 REFRESH_TOKEN_EXPIRY = 10d
+
+CLOUDINARY_CLOUD_NAME= 
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
